2010-10-21  Romain Francois <romain@r-enthusiasts.com>

    * inst/include/Rcpp/vector/MatrixColumn.h: Fixed indexing bug (mismatch 
    between number of rows and number of columns
    
    * inst/unitTests/runit.Matrix.R: test the fix above based on the 
    R-help/Rcpp-devel thread: http://article.gmane.org/gmane.comp.lang.r.rcpp/851
    
2010-10-21  Dirk Eddelbuettel  <edd@debian.org>

	* inst/include/Rcpp/Module.h: Reorder instantiation for class_ 

2010-10-20  Dirk Eddelbuettel  <edd@debian.org>

	* include/Rcpp/XPtr.h: Applied patch by Karl Millar
	* include/Rcpp/vector/Vector.h): Idem

2010-10-19  Dirk Eddelbuettel  <edd@debian.org>

	* src/posixt.cpp: Correct POSIXct, POSIXt ordering for R 2.12.0

2010-10-14  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version): Release 0.8.7

        * debian/*: Similarly updated for new release to Debian

2010-10-10  Romain Francois <romain@r-enthusiasts.com>

	* tests/doRUnit.R: workaround to disable tests on windows 64 until we can
	  figure out what upsets R CMD check.

	* R/Module.R: expose the finalizer

2010-10-07  John M Chambers  <jmc@r-project.org>

	* R/Module.R: modify cpp_refMethods to substitute the .External
	directly with the method and class pointers.

2010-10-03  Dirk Eddelbuettel  <edd@debian.org>

	* inst/include/Rcpp/stats/random/r*: Added comment reminding users
	read up on Section 6.3 of "Writing R Extensions" and the need to
	call GetRNGstate() and PutRNGstate() when using R's RNGs

2010-09-30  Romain Francois <romain@r-enthusiasts.com>

        * inst/include/Rcpp/vector/MatrixRow.h: Matrix row inherits
	VectorBase so that it becomes a sugar expression, so that we can do
	something like this:
          NumericMatrix x( ... ) ;
          NumericVector x0 = x.row(0) ;

        * inst/include/Rcpp/vector/MatrixColumn.h: idem for columns

        * cleanup: run make clean in the inst/doc directory to install
        the fake vignettes

2010-09-27  Romain Francois <romain@r-enthusiasts.com>
